[gd_scene load_steps=2 format=3 uid="uid://dqwhvypcrgj5r"]

[ext_resource type="Script" uid="uid://blql2mli1rf3t" path="res://Scenes/dialogue.gd" id="1_m4115"]

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_m4115")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -196.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 34.0
grow_horizontal = 2
vertical_alignment = 1

[node name="TextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 47.0
offset_right = -29.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
scroll_active = false

[node name="HintLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -161.0
offset_top = -42.0
offset_right = -30.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
